--- a/src/index.css
+++ b/src/index.css
@@ -10,22 +10,26 @@ body {
   font-family: "Satoshi";
   src: url("./assets/fonts/Satoshi-Regular.ttf") format("truetype");
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Satoshi";
   src: url("./assets/fonts/Satoshi-Bold.ttf") format("truetype");
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Satoshi";
   src: url("./assets/fonts/Satoshi-Light.ttf") format("truetype");
   font-weight: 300;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Satoshi";
   src: url("./assets/fonts/Satoshi-Medium.ttf") format("truetype");
   font-weight: 500;
+  font-display: swap;
 }
