--- a/src/index.css
+++ b/src/index.css
@@ -8,24 +8,12 @@ body {
 
 @font-face {
   font-family: "Satoshi";
-  src: url("./assets/fonts/Satoshi-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/Satoshi-Regular.ttf") format("tff");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Satoshi";
-  src: url("./assets/fonts/Satoshi-Bold.ttf") format("truetype");
+  src: url("./assets/fonts/Satoshi-Bold.ttf") format("tff");
   font-weight: 700;
-}
-
-@font-face {
-  font-family: "Satoshi";
-  src: url("./assets/fonts/Satoshi-Light.ttf") format("truetype");
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: "Satoshi";
-  src: url("./assets/fonts/Satoshi-Medium.ttf") format("truetype");
-  font-weight: 500;
 }
